Adding INSTTQS support v3

--- a/novatel_gps_driver/CMakeLists.txt
+++ b/novatel_gps_driver/CMakeLists.txt
@@ -66,6 +66,7 @@ add_library(${PROJECT_NAME}
   src/parsers/inscov.cpp
   src/parsers/inspva.cpp
   src/parsers/inspvax.cpp
+  src/parsers/insattqs.cpp
   src/parsers/insstdev.cpp
   src/parsers/parsing_utils.cpp
   src/parsers/range.cpp
