--- a/novatel_gps_driver/CMakeLists.txt
+++ b/novatel_gps_driver/CMakeLists.txt
@@ -109,9 +109,9 @@ if(CATKIN_ENABLE_TESTING)
   target_link_libraries(parser_tests ${PROJECT_NAME})
   set_target_properties(parser_tests PROPERTIES COMPILE_FLAGS "-std=c++11")
 
-  add_rostest_gtest(novatel_gps_tests test/novatel_gps_tests.test test/novatel_gps_tests.cpp)
-  target_link_libraries(novatel_gps_tests ${PROJECT_NAME})
-  set_target_properties(novatel_gps_tests PROPERTIES COMPILE_FLAGS "-std=c++11")
+  #add_rostest_gtest(novatel_gps_tests test/novatel_gps_tests.test test/novatel_gps_tests.cpp)
+  #target_link_libraries(novatel_gps_tests ${PROJECT_NAME})
+  #set_target_properties(novatel_gps_tests PROPERTIES COMPILE_FLAGS "-std=c++11")
 endif()
 
 ### Install Libraries and Headers ###
